assets/main.css
@layer base, components, utilities;
@layer base {
  :root {
    --color-background: #fff;
    --color-body: #1f2937;
    --color-headings: #111827;
    --color-link-hover: var(--color-body);
    --color-link: inherit;
    --font-size-1: 9rem;
    --font-size-2: 10rem;
    --font-size-3: 14rem;
    --font-size-4: 17rem;
    --invert-dark: invert(0.2);

    @media (prefers-color-scheme: dark) {
      --color-background: #262626;
      --color-body: #d1d5db;
      --color-headings: #fff;
      --color-link-hover: #f3f4f6;
      --color-link: inherit;
      --invert-dark: invert(1);
    }
  }

  /* https://developer.mozilla.org/en-US/docs/Web/CSS/Layout_cookbook/Sticky_footers */
  * {
    box-sizing: border-box;
  }
  html {
    height: 100%;
  }
  body {
    display: flex;
    flex-direction: column;
    min-height: 100%;
  }
  main {
    flex-grow: 1;
  }

  html {
    /* 
     12.5% of 16px, the default browser font size, is 2px, making calculation from rem units to px
     simple. See
     [dont-use-pixels-for-font-size](https://www.aleksandrhovhannisyan.com/blog/use-rems-for-font-size/#dont-use-pixels-for-font-size)
     for why percentage is used.
    */
    font-size: 12.5%;
    /* moving from pages with no scrollbar to ones which do should not cause the layout to jump */
    scrollbar-gutter: stable;
  }

  body {
    background-color: var(--color-background);
    color: var(--color-body);
    font-size: 8rem;
    margin-left: auto;
    margin-right: auto;
    margin-top: 0;
    max-width: var(--page-width);
    padding: var(--page-margin);

    @media not all and (min-width: 640px) {
      padding: 8rem;
    }
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  strong {
    color: var(--color-headings);
    margin-bottom: 8rem;
    margin-top: 10rem;
    line-height: 1.25;
    break-after: avoid-page;
  }

  h1 {
    font-size: 10rem;
    font-weight: 600;
  }

  h2 {
    border-bottom: 1px solid;
    font-size: var(--font-size-3);
    font-weight: 600;
    padding-bottom: 4rem;
  }

  h3 {
    font-size: var(--font-size-2);
    font-weight: 600;
  }

  h4,
  h5,
  h6,
  a,
  p,
  li {
    font-size: var(--font-size-1);
    font-weight: 400;
    line-height: 10rem;
  }

  p,
  ul,
  ol {
    margin-bottom: 10rem;
    break-inside: avoid;
  }

  ul {
    list-style-type: disc;
    padding-inline-start: 13rem;

    ul {
      list-style-type: circle;
      margin-bottom: 6rem;
      margin-top: 6rem;
    }

    > li {
      margin-bottom: 4rem;
      margin-top: 4rem;
      padding-inline-start: 1.25rem;
    }
  }

  /* checkboxes should not have discs */
  ul:has(input) {
    list-style-type: none;
    padding-inline-start: 0;
  }

  a {
    color: var(--color-link);
    text-decoration-line: underline;
    text-underline-offset: 2rem;

    &:hover {
      color: var(--color-link-hover);
    }
  }

  /* code and large media should not grow its parent element */
  img,
  iframe,
  video {
    max-width: 100%;
  }
  pre {
    overflow-x: auto;
    overflow-y: hidden;
  }
  }

  header > nav > ul > li:first-child {
    flex-grow: 1;

    > a {
      font-size: var(--font-size-3);
      font-weight: 600;
      text-decoration-line: none;
    }
  }

  footer {
    > nav > ul {
      justify-content: center;

      > li > a > img {
        display: inline-block;
        filter: var(--invert-dark);
        height: 1em;
        margin-right: 6rem;
        vertical-align: calc(0.5cap - 0.5em);
        width: 1em;
      }
    }
  }
  footer {
    padding-top: 14rem;
  }
}

@layer components {
  .inline-list {
    display: flex;
    flex-wrap: wrap;
    gap: 6rem;
    list-style-type: none;
    padding-left: 0;

    > li {
      margin-bottom: 0;
      margin-top: 0;
      padding-inline-start: 0;
      white-space: nowrap;
    }
  }
}

